change inital version

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,7 +1,7 @@
 <div fxFill="true">
   <div fxLayout="column" fxFlex fxFill="true" fxLayoutAlign="center center">
     <h1>
-      Demostración MVP Simulador Solicitud Créditos Personas git
+      Demostración MVP Simulador Solicitud Créditos Personas
     </h1>
     <div fxLayout="row" fxLayoutAlign="end center">
       <a mat-raised-button color="primary" routerLink="/select">Ir a demo</a>
